# cgm-analytics

./: EDA_Synthetic_Data_MM.ipynb  LICENSE  README.md  setup.py
Arun/: W210_Syntheticdataset_transformer.ipynb
EDA/: Feature_EDA.ipynb  W210_EDAipynb.ipynb
Modelling/: model2_baseline.py  model2_ensemble.py  model2_ensemble_imb_dataset.py  requirements.txt
backend/: .gitignore  Procfile  pyproject.toml  requirements.txt
backend/.ebextensions/: python.config
backend/src/: api.py  key_generator.py  main.py  models.py  requirements.txt
backend/src/ml_pipeline/: features.py  helper_functions.py  modeling_util.py  nutrinet.py
backend/tests/: test_app.py
cgm-analytics/: package-lock.json
cgm-analytics/pages/: about.tsx
cgm-analytics/src/app/: page.tsx
cgm-analytics/src/app/components/: Card.tsx  TopNav.tsx
cgm-analytics/src/app/team/: page.tsx
cgm-analytics/src/app/upload/: page.tsx
frontend/: globals.d.ts  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/amplify/: team-provider-info.json
frontend/amplify/.config/: project-config.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/components/: Card.tsx  DataCollectionAgreement.tsx  Spinner.tsx  TeamPage.tsx  TopNav.tsx  UserAgreement.tsx
frontend/src/app/team/: page.tsx
modeling/: baseline_model_testing.py  lgbm_meal_detection_model.py  lgbm_model_testing.py  modeling_util.py  svr_carb_estimate_model.py  svr_model_testing.py
nutrinet_pipeline/: meal_prediction_table.csv  nutrinet.py  utils.py
preprocessing/: cnn_preprocessing.py  cnn_preprocessing_original.py  derive_features.py  derive_features_Hall2018.py  glucose_sim.py  process_hall2018.py  process_syntheticDataset.py  train_test_split.py  visualizations.py
(+2 files in other folders)
