[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Milan Dean <milan387@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
pandas = "^2.0.2"
numpy = "^1.21.0"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
