[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Milan Dean <milan387@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
pandas = "^2.0.2"
numpy = "^1.21.0"
scikit-learn = "^1.2.2"
python-multipart = "^0.0.6"
click = "^8.1.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
aiofiles = "^23.1.0"
cryptography = "^41.0.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
