[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Milan Dean <milan387@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
pandas = "^2.0.2"
numpy = "^1.21.0"
scikit-learn = "^1.2.2"
python-multipart = "^0.0.6"
click = "^8.1.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
cryptography = "^41.0.1"
pydantic = "^1.10.9"
boto3 = "^1.26.165"
pyathena = "^3.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = ">=23.3.0"
isort = "^5.12.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
